[project]
name = "decom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Olsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.125.2",
    "lark>=1.2.2",
    "sympy>=1.13.3",
]

[project.scripts]
decom = "decom:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
